<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <group android:id="@+id/listmenu">


        <item
            android:id="@+id/menu_search"
            android:icon="@drawable/ic_action_search"
            android:title="@string/search"
            app:actionViewClass="org.gmu.ui.PlaceSearchView"
            app:showAsAction="ifRoom|collapseActionView" />

        <item
            android:id="@+id/menu_switchtomap"
            android:icon="@drawable/ic_action_map"
            android:title="@string/mapview"
            app:showAsAction="ifRoom" />


    </group>


    <group android:id="@+id/mapmenu">


        <!--<item-->
        <!--android:id="@+id/menu_switchtolist"-->
        <!--android:title="Change View"-->
        <!--android:showAsAction="ifRoom"-->
        <!--android:icon="@drawable/ic_collections_view_as_list"-->
        <!--android:visibility="gone"/>-->
        <item
            android:id="@+id/menu_gps"
            android:icon="@drawable/ic_action_location_found"
            android:title="@string/center_location"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/menu_refresh_map"
            android:icon="@drawable/ic_action_refresh"
            android:title="@string/refresh"
            app:showAsAction="ifRoom" />


        <!--<item-->
        <!--android:id="@+id/menu_offline"-->
        <!--android:title="Offline Mode on/off"-->
        <!--android:showAsAction="ifRoom"-->
        <!--android:icon="@drawable/ic_offline"/>-->


    </group>


    <group android:id="@+id/detail_menu">
        <item
            android:id="@+id/menu_centeronmap"
            android:icon="@drawable/ic_action_place"
            android:title="@string/center_map"
            app:showAsAction="always" />
        <item
            android:id="@+id/menu_share"
            android:icon="@drawable/ic_action_share"
            android:title="@string/share"
            app:showAsAction="always" />
        <item
            android:id="@+id/menu_directions"
            android:icon="@drawable/ic_action_directions"
            android:title="@string/show_on_maps"
            app:showAsAction="always" />

        <item
            android:id="@+id/menu_refresh"
            android:icon="@drawable/ic_action_refresh"
            android:title="@string/refresh"
            app:showAsAction="always" />


    </group>
    <group android:id="@+id/filters">

        <item
            android:id="@+id/menu_favorite"
            android:icon="@drawable/ic_action_favorite_off"
            android:title="@string/favorite_off"
            app:showAsAction="ifRoom" />


        <item
            android:id="@+id/menuitem_theme"
            android:title="NextTheme"
            app:showAsAction="ifRoom" />
    </group>

</menu>